[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ML D&D"
version = "1.0.1"
description = "Visual Drag-and-drop Machine Learning Trainer"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "Shivam Sharma"}
]
keywords = ["machine learning", "pytorch", "visual", "no-code"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "dearpygui>=1.11.0",
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
training = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[tool.setuptools.package-data]
"ML D&D" = ["templates/*.mlf"]

[project.scripts]
ml-forge = "ML D&D.main:main"
