[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mldd-core"
version = "1.0.7"
description = "Visual Drag-and-drop Machine Learning Trainer"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "Shivam Sharma"}
]
keywords = ["machine learning", "pytorch", "visual", "no-code"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "dearpygui>=1.11.0",
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
training = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ml_D_D*"]

[tool.setuptools.package-data]
ml_D_D = ["templates/*.mlf"]

[project.scripts]
mldd = "ml_D_D.main:main"
